# tdeaccessibility

./: CMakeL10n.txt  CMakeLists.txt  ConfigureChecks.cmake  Makefile.am.in  config.h.cmake  configure.in.in  kdeaccessibility.lsm  tdeaccessibility.lsm
IconThemes/: CMakeL10n.txt  CMakeLists.txt  Makefile.am
IconThemes/mono/: index.theme
doc/: CMakeLists.txt
doc/kmag/: CMakeLists.txt  index.docbook  man-kmag.1.docbook
doc/kmousetool/: CMakeLists.txt  index.docbook  man-kmousetool.1.docbook
doc/kmouth/: CMakeLists.txt  index.docbook  kmouthcpref.eps  kmouthctts.eps  kmouthcwcp.eps  kmouthedit.eps  kmouthmain.eps  kmouthwizard.eps  man-kmouth.1.docbook
doc/ksayit/: CMakeLists.txt  index.docbook
doc/kttsd/: CMakeLists.txt  index.docbook
doc/man/: CMakeLists.txt
doc/man/kmag/: CMakeLists.txt  kmag.1
doc/man/kmousetool/: CMakeLists.txt  kmousetool.1
doc/man/kmouth/: CMakeLists.txt  kmouth.1
doc/man/ksayit/: CMakeLists.txt  ksayit.1
doc/man/kttsd/: CMakeLists.txt  kttsd.1  kttsmgr.1
kbstateapplet/: CMakeL10n.txt  CMakeLists.txt  Makefile.am  kbstate.cpp  kbstate.h  kbstateapplet.desktop
kbstateapplet/images/: CMakeLists.txt
kmag/: CMakeL10n.txt  CMakeLists.txt  INSTALL  Makefile.am  TODO  kmag.cpp  kmag.desktop  kmag.h  kmag.kdevprj  kmag.lsm  kmag.mdk.spec  kmagselrect.cpp  kmagselrect.h  kmagzoomview.cpp  kmagzoomview.h  main.cpp
kmag/images/: CMakeLists.txt  Makefile.am
kmousetool/: README  (+2 more)
kmousetool/kmousetool/: CMakeL10n.txt  CMakeLists.txt  Makefile.am  kmousetool.cpp  kmousetool.desktop  kmousetool.h  kmousetoolui.ui  main.cpp
kmousetool/kmousetool/pics/: CMakeLists.txt
kmouth/: CMakeL10n.txt  CMakeLists.txt  Makefile.am  configwizard.cpp  configwizard.h  kmouth.cpp  kmouth.desktop  kmouth.h  kmouth.lsm  main.cpp  optionsdialog.cpp  optionsdialog.h  phraselist.cpp  phraselist.h  phraselistitem.cpp  preferencesui.ui  speech.cpp  speech.h  texttospeechconfigurationui.ui  texttospeechconfigurationwidget.cpp  texttospeechconfigurationwidget.h  texttospeechsystem.cpp  texttospeechsystem.h
kmouth/books/: CMakeLists.txt  en.desktop  nl.desktop  sv.desktop
kmouth/icons/: CMakeLists.txt  Makefile.am
kmouth/icons/app/: CMakeLists.txt
kmouth/icons/history/: CMakeLists.txt  Makefile.am
kmouth/icons/phrase/: Makefile.am
kmouth/icons/phrasebook/: Makefile.am
kmouth/phrasebook/: CMakeLists.txt  Makefile.am  buttonboxui.ui  phrasebook.cpp  phrasebook.h  phrasebookdialog.cpp  phrasebookdialog.h  phrasetree.cpp  phrasetree.h
kmouth/wordcompletion/: CMakeLists.txt  creationsourcedetailsui.ui  creationsourcedetailsui.ui.h  creationsourceui.ui  dictionarycreationwizard.cpp  dictionarycreationwizard.h  kdedocsourceui.ui  klanguagebutton.cpp  klanguagebutton.h  klanguagebuttonhelper.cpp  wordcompletion.cpp  wordcompletion.h  wordcompletionui.ui  wordcompletionui.ui.h  wordcompletionwidget.cpp  wordcompletionwidget.h  wordlist.cpp
ksayit/Freeverb_plugin/: CMakeLists.txt  Makefile.am  freeverb_setup.ui  freeverbsetupimpl.cpp  freeverbsetupimpl.h  kdeexportfix.h  ksayit_libFreeverb.desktop  ksayit_libFreeverb_service.desktop  ksayitfreeverblib.cpp  ksayitfreeverblib.h
ksayit/src/: CMakeL10n.txt  CMakeLists.txt  DocTreeView.ui  DocTreeView.ui.h  KSayItView.ui  Makefile.am  Types.h  contextmenuhandler.cpp  contextmenuhandler.h  docbookclasses.cpp  docbookclasses.h  docbookgenerator.cpp  docbookgenerator.h  docbookparser.cpp  docbookparser.h  doctreeviewimpl.cpp  doctreeviewimpl.h  effectstack.cpp  effectstack.h  fx_setup.ui  fxpluginhandler.cpp  fxpluginhandler.h  fxsetupimpl.cpp  fxsetupimpl.h  ksayit.cpp  ksayit.desktop  ksayit.h  ksayit_fxplugin.h  ksayit_ttsplugin.h  ksayitbookmarkhandler.cpp  ksayitbookmarkhandler.h  ksayitsystemtray.cpp  ksayitsystemtray.h  ksayitui.rc  ksayitviewimpl.cpp  ksayitviewimpl.h  main.cpp  parasaxparser.cpp  parasaxparser.h  saxhandler.cpp  (+3 more)
kttsd/: CMakeL10n.txt  CMakeLists.txt  ChangeLog  Makefile.am  README  README.kttsd  TODO  clean_obsolete.sh  configure.in.bot  configure.in.in  cvs2dist  kttsd.lsm
kttsd/app-plugins/: CMakeLists.txt
kttsd/app-plugins/kate/: CMakeLists.txt  Makefile.am  katekttsd.cpp  katekttsd.h  ktexteditor_kttsd.desktop  tdetexteditor_kttsd.desktop  tdetexteditor_kttsdui.rc
kttsd/compat/: README_COMPAT
kttsd/debian/: TODO  control  kttsd-gstreamer.install  kttsd.install
kttsd/debian/man/: kttsd.1  kttsmgr.1
kttsd/filters/: CMakeLists.txt  Makefile.am  kttsd_filterplugin.desktop  main.cpp
kttsd/filters/sbd/: CMakeLists.txt  kttsd_sbdplugin.desktop  sbdconf.cpp  sbdconf.h  sbdconfwidget.ui  sbdplugin.cpp  sbdproc.cpp  sbdproc.h
kttsd/filters/stringreplacer/: CMakeLists.txt  editreplacementwidget.ui  kttsd_stringreplacerplugin.desktop  stringreplacerconf.cpp  stringreplacerconf.h  stringreplacerconfwidget.ui  stringreplacerplugin.cpp  stringreplacerproc.cpp  stringreplacerproc.h
kttsd/kcmkttsmgr/: CMakeLists.txt  Makefile.am  addtalker.cpp  addtalker.h  addtalkerwidget.ui  kcmkttsd.desktop  kcmkttsd_testmessage.desktop  kcmkttsmgr.cpp  kcmkttsmgr.h  kcmkttsmgrwidget.ui  selectevent.cpp  selectevent.h  selecteventwidget.ui
kttsd/kttsd/: CMakeLists.txt  Makefile.am  filtermgr.cpp  filtermgr.h  kttsd.cpp  kttsd.desktop  kttsd.h  main.cpp  speaker.cpp  speaker.h  speechdata.cpp  speechdata.h  ssmlconvert.cpp  ssmlconvert.h  talkermgr.cpp  talkermgr.h  threadedplugin.cpp  threadedplugin.h
kttsd/kttsjobmgr/: CMakeLists.txt  Makefile.am  kttsjobmgr.cpp  kttsjobmgr.desktop  kttsjobmgr.h
kttsd/kttsmgr/: CMakeLists.txt  Makefile.am  kttsmgr.cpp  kttsmgr.desktop  kttsmgr.h
kttsd/libkttsd/: CMakeLists.txt  Makefile.am  filterconf.cpp  filterconf.h  filterproc.cpp  filterproc.h  kdeexportfix.h  kttsd_synthplugin.desktop  notify.cpp  notify.h  player.h  pluginconf.cpp  pluginconf.h  pluginproc.cpp  pluginproc.h  selecttalkerdlg.cpp  selecttalkerdlg.h  selecttalkerwidget.ui  stretcher.cpp  stretcher.h  talkercode.cpp  talkercode.h  testplayer.cpp  testplayer.h  utils.h
kttsd/players/: CMakeLists.txt  Makefile.am  kttsd_audioplugin.desktop
kttsd/plugins/: CMakeLists.txt  Makefile.am
(+613 files in other folders)
