#tdevelop: festivalint_DIR = festivalint
if include_kttsd_festivalint
  festivalint_DIR = festivalint
endif

#tdevelop: freetts_DIR = freetts
if include_kttsd_freetts
  freetts_DIR = freetts
endif

#tdevelop: command_DIR = command
if include_kttsd_command
  command_DIR = command
endif

#tdevelop: hadifix_DIR = hadifix
if include_kttsd_hadifix
  hadifix_DIR = hadifix
endif

#tdevelop: flite_DIR = flite
if include_kttsd_flite
  flite_DIR = flite
endif

#tdevelop: epos_DIR = epos
if include_kttsd_epos
  epos_DIR = epos
endif

SUBDIRS = \
        $(festivalint_DIR) \
        $(freetts_DIR) \
        $(command_DIR) \
        $(hadifix_DIR) \
        $(flite_DIR) \
        $(epos_DIR)
